@@ -1,0 +1,21 @@
+- Panning
+    - Double check steps to rotation and accuracy, somehow feel that 2038 steps isn't right for the motor for some reason and feels off?
+        - Possibly do 30 x full rotations or more and then see how far it is off from 30x2038?
+
+- Gyro / Compass
+    - Gyro / Compass calibration
+        - Need to think about this...
+        - Has a bubble level on the ody but not good enough perhaps?
+        - How to best correspond angles?
+
+- Camera Shutter Trigger
+
+- Audio
+    - Use buzzer or use DAC with Speaker?
+
+- Tilting (do as late as possible due to assembly)
+
+- BLE Set up config API for Android etc...?
+
+- Logger
+    - Add to config etc... API for BLE
