@@ -26,5 +26,7 @@ lib_deps =
 	weedmanu/ToneESP32@^1.0.0
 	lostincompilation/PrettyOTA@^1.1.3
 	fastled/FastLED@^3.10.0
+	x385832/Elog@^2.0.10
 build_flags = -DBOARD_HAS_PSRAM
 	-mfix-esp32-psram-cache-issue
+	-DDEBUG_LOG
